apps/forgejo/manifest.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-ingressroute
  namespace: forgejo
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`forgejo.andusystems.com`) && PathPrefix(`/`)"
      kind: Rule
      middlewares:
        - name: forgejo-headers
          namespace: forgejo
      services:
        - name: forgejo-http
          port: 3000
          namespace: forgejo
  tls:
    secretName: forgejo-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-ingressroute-http
  namespace: forgejo
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`forgejo.andusystems.com`) && PathPrefix(`/`)"
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: forgejo
      services:
        - name: forgejo-http
          port: 3000
          namespace: forgejo
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: forgejo
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forgejo-headers
  namespace: forgejo
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
